# smart-study-companion

./: README.md  app.py  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
instance/: study.db
